versioned_docs/version-6.2/client-api/changes/content/_how-to-subscribe-to-index-changes-csharp.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import Panel from "@site/src/components/Panel";
import ContentFrame from "@site/src/components/ContentFrame";

<Admonition type="note" title="">

Subscribe to index changes using `ForIndex` or `ForAllIndexes`.

<Admonition type="warning" title="">
The `Subscribe` method on the observable these methods return accepts only an `IObserver` object
by default.  
To instead subscribe with a delegate, like the `change => ...` lambda used in the examples below,
add the [System.Reactive](https://www.nuget.org/packages/System.Reactive/) package to your project.  
This adds `Subscribe` overloads that take delegates, including ones with error and
completion handlers.  
</Admonition>

* In this article:
   * [ForIndex](../../../client-api/changes/how-to-subscribe-to-index-changes.mdx#forindex)
   * [ForAllIndexes](../../../client-api/changes/how-to-subscribe-to-index-changes.mdx#forallindexes)
   * [IndexChange and IndexChangeTypes syntax](../../../client-api/changes/how-to-subscribe-to-index-changes.mdx#indexchange-and-indexchangetypes-syntax)

</Admonition>

<Panel heading="ForIndex">

Index changes for one index can be observed using `ForIndex` method.

<ContentFrame>

### Syntax

```csharp
IChangesObservable<IndexChange> ForIndex(string indexName);
```
<br />

| Parameters | | |
| ------------- | ------------- | ----- |
| **indexName** | string | Name of an index for which notifications will be processed. |

| Return Value | |
| ------------- | ----- |
| IChangesObservable&lt;[IndexChange](../../../client-api/changes/how-to-subscribe-to-index-changes.mdx#indexchange-and-indexchangetypes-syntax)&gt; | Observable that allows to add subscriptions to notifications for index with given name. |

</ContentFrame>
<ContentFrame>

### Example

```csharp
IDisposable subscription = store
    .Changes()
    .ForIndex("Orders/All")
    .Subscribe(
        change =>
        {
            switch (change.Type)
            {
                case IndexChangeTypes.None:
                    //Do someting
                    break;
                case IndexChangeTypes.BatchCompleted:
                    //Do someting
                    break;
                case IndexChangeTypes.IndexAdded:
                    //Do someting
                    break;
                case IndexChangeTypes.IndexRemoved:
                    //Do someting
                    break;
                case IndexChangeTypes.IndexDemotedToIdle:
                    //Do someting
                    break;
                case IndexChangeTypes.IndexPromotedFromIdle:
                    //Do someting
                    break;
                case IndexChangeTypes.IndexDemotedToDisabled:
                    //Do someting
                    break;
                case IndexChangeTypes.IndexMarkedAsErrored:
                    //Do someting
                    break;
                case IndexChangeTypes.SideBySideReplace:
                    //Do someting
                    break;
                case IndexChangeTypes.IndexPaused:
                    //Do someting
                    break;
                case IndexChangeTypes.LockModeChanged:
                    //Do someting
                    break;
                case IndexChangeTypes.PriorityChanged:
                    //Do someting
                    break;
                default:
                    throw new ArgumentOutOfRangeException();
            }
        });
```

</ContentFrame>

</Panel>

<Panel heading="ForAllIndexes">

Index changes for all indexex can be observed using `ForAllIndexes` method.

<ContentFrame>

### Syntax

```csharp
IChangesObservable<IndexChange> ForAllIndexes();
```
<br />

| Return Value | |
| ------------- | ----- |
| IChangesObservable&lt;[IndexChange](../../../client-api/changes/how-to-subscribe-to-index-changes.mdx#indexchange-and-indexchangetypes-syntax)&gt; | Observable that allows to add subscriptions to notifications for all indexes. |

</ContentFrame>
<ContentFrame>

### Example

```csharp
IDisposable subscription = store
    .Changes()
    .ForAllIndexes()
    .Subscribe(change => Console.WriteLine("{0} on index {1}", change.Type, change.Name));
```

</ContentFrame>

</Panel>

<Panel heading="IndexChange and IndexChangeTypes syntax">

<Tabs>
<TabItem value="IndexChange" label="IndexChange">

**The notification object delivered to subscribers when an index changes.**

```csharp
class IndexChange
{
    IndexChangeTypes Type
    string Name
}
```
<br />

| Property | Type | Description |
| ------------- | ------------- | ----- |
| **Type** | [IndexChangeTypes](../../../client-api/changes/how-to-subscribe-to-index-changes.mdx#indexchange-and-indexchangetypes-syntax) | Change type |
| **Name** | string | Index name |

</TabItem>
<TabItem value="IndexChangeTypes" label="IndexChangeTypes">

```csharp
enum IndexChangeTypes
{
    None,
    BatchCompleted,
    IndexAdded,
    IndexRemoved,
    IndexDemotedToIdle,
    IndexPromotedFromIdle,
    IndexDemotedToDisabled,
    IndexMarkedAsErrored,
    SideBySideReplace,
    Renamed,
    IndexPaused,
    LockModeChanged,
    PriorityChanged,
    RollingIndexChanged,
}
```
<br />

| Name | Value |
| ---- | ----- |
| **None** | `0` |
| **BatchCompleted** | `1` |
| **IndexAdded** | `8` |
| **IndexRemoved** | `16` |
| **IndexDemotedToIdle** | `32` |
| **IndexPromotedFromIdle** | `64` |
| **IndexDemotedToDisabled** | `256` |
| **IndexMarkedAsErrored** | `512` |
| **SideBySideReplace** | `1024` |
| **Renamed** | `2048` |
| **IndexPaused** | `4096` |
| **LockModeChanged** | `8192` |
| **PriorityChanged** | `16384` |
| **RollingIndexChanged** | `65536` |

</TabItem>
</Tabs>

</Panel>
